css/stye.css
body {
    margin: 5;
    padding: 5;
}

#map {
    position: absolute;
    top: 0;
    bottom: 0;
    width: 100%;
}

.sidebar {
    position: relative;
    width: 41%;
    margin: 10px;
    z-index: 10;
    font-family: 'Courier New', Courier, monospace;
    background-color: antiquewhite;
    border-radius: 3px;
    padding: 5px;
}

.title {
    font-weight: bold;
}

.mapboxgl-popup-close-button {
    display: none;
}

.mapboxgl-popup-content {
    font: 400 15px/22px 'Courier New', Courier, monospace;
    padding: 10;
    width: 180px;
    background-color: antiquewhite;
}

button {
    display: block;
    position: relative;
    width: 10%;
    height: 30px;
    padding: 5px;
    border: none;
    border-radius: 3px;
    font-size: 13px;
    text-align: center;
    font-family: 'Courier New', Courier, monospace;
    color: black;
    background: antiquewhite;
    margin-top: 10px;
    margin-left: 10px;
    opacity: 50;
    z-index: 1;
}

